fixed form overflow

--- a/frontend/src/newscss/formPage.scss
+++ b/frontend/src/newscss/formPage.scss
@@ -2,6 +2,7 @@
     display: flex;
     background-color: #0F0001;
     flex-direction: row;
+    overflow-x: hidden;
 
     @media (max-width:1000px) {
         flex-direction: column;
